public/stylesheets/style.css
* {
  box-sizing: border-box;
}

body, html {
  height: 100%;
  padding: 0;
  margin: 0;
  font-family: sans-serif;
  color: #939393;
  background-color: #5a6267;
}

#myChart {
  width: 1000px;
  height: 1000px;
}

a {
  text-decoration: none;
  word-wrap: break-word;
  color: #000000;
  font-weight: bold;
  transition: color .1s;
}

a:hover {
  color: #df292e;
}

button {
  background-color: white;
  border: 0;
  padding: 1%;
  color: #dc3545;
  font-weight: bold;
  transition: background-color .1s;
  cursor: pointer;
  border-radius: 5px;
  border: solid black 1px;
}

button:hover {
  background-color: #dc3545;
  color: white;
}

.signUp {
  margin-top: 10px;
  height: 46px;
  padding-top: 10px;
}

.bodyContent {
  background-color: rgb(233, 233, 233);
}

.post-list {
  margin: auto;
  padding: auto;
  list-style-type: none;
}

textarea, input {
  padding: .5%;
  border-radius: 18px;
  border: 1px solid #ccc;
}

textarea:focus, input:focus {
  outline: none;
  border: 1px solid #3486eb;
}

textarea {
  min-width: 40%;
  min-height: 100px;
}

form > div {
  margin-bottom: 2%;
}

form label {
  display: block;
}

.wrapper {
  width: 100%;
  min-height: 100%;
  max-width: 1400px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  background-color: #ccc;
}

header {
  border-bottom: 1px solid #ccc;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1%;
}

header h1 {
  font-size: 1em;
}

main {
  flex: 1;
  padding: 2% 4%;
  background-color: rgb(233, 233, 233);
}

.btn-no-style {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  text-decoration: none;
  color: #225ca3;
  font-size: 100%;
  font-weight: bold;
  transition: color .1s;
  margin-left: 16px;
}

.btn-no-style:hover {
  background: none;
  color: #3486eb;
}

.delete-post-btn {
  background-color: #d41414;
}

.delete-post-btn:hover {
  background-color: #ff643d;
}

.post {
  margin-bottom: 2%;
  line-height: 150%;
}

.post .title span {
  font-style: italic;
  font-size: 90%;
  color: #7d7d7d;
}

.edit-link {
  display: block;
  margin: -1.5% 0 2% 0;
}

.upvote-btn {
  background-color: #dc3545;
  transition: background-color .1s;
  color: white;
  
}

.upvote-btn:hover {
  background-color: white;
  color: #dc3545;
}

.comment-form {
  margin-bottom: 5%;
}

.comment {
  padding: 1%;
  margin-bottom: 1%;
  background-color: white;
  border-radius: 5px;
}

.comment .meta {
  font-size: 90%;
  margin-bottom: .5%;
  opacity: .6;
}

.new-post-form input {
  width: 300px;
}

.edit-post-form {
  margin-bottom: 5%;
}

footer {
  border-top: 1px solid #ccc;
  display: flex;
  justify-content: center;
  padding: 1%;
  font-size: 110%;
}

